--- a/index.html
+++ b/index.html
@@ -132,24 +132,32 @@
     
     <div class="container">
         <div class="screenshots">
+<div class="screenshots">
             <div class="screenshot">
-                <img src="images/screenshot1.png" alt="Month View">
+                <img src="images/screenshot1.PNG" alt="Month View">
                 <p>Month View</p>
             </div>
             <div class="screenshot">
-                <img src="images/screenshot2.png" alt="Week View">
+                <img src="images/screenshot2.PNG" alt="Month View">
+                <p>Month View</p>
+            </div>
+            <div class="screenshot">
+                <img src="images/screenshot3.PNG" alt="Week View">
                 <p>Week View</p>
             </div>
             <div class="screenshot">
-                <img src="images/screenshot3.png" alt="Day View">
+                <img src="images/screenshot4.PNG" alt="Week View">
+                <p>Week View</p>
+            </div>
+            <div class="screenshot">
+                <img src="images/screenshot5.PNG" alt="Day View">
                 <p>Day View</p>
             </div>
             <div class="screenshot">
-                <img src="images/screenshot4.png" alt="List View">
+                <img src="images/screenshot6.PNG" alt="List View">
                 <p>List View</p>
             </div>
-        </div>
-        
+        </div>        
         <div class="download-section">
             <a href="#" class="app-store-btn">Download on the App Store</a>
             <p style="margin-top: 10px; color: #666; font-size: 0.9em;">Coming Soon</p>
