--- a/index.html
+++ b/index.html
@@ -133,27 +133,27 @@
     <div class="container">
         <div class="screenshots">
             <div class="screenshot">
-                <img src="images/screenshot1.PNG" alt="Month View">
+                <img src="images/screenshot1.png" alt="Month View">
                 <p>Month View</p>
             </div>
             <div class="screenshot">
-                <img src="images/screenshot2.PNG" alt="Month View">
+                <img src="images/screenshot2.png" alt="Month View">
                 <p>Month View</p>
             </div>
             <div class="screenshot">
-                <img src="images/screenshot3.PNG" alt="Week View">
+                <img src="images/screenshot3.png" alt="Week View">
                 <p>Week View</p>
             </div>
             <div class="screenshot">
-                <img src="images/screenshot4.PNG" alt="Week View">
+                <img src="images/screenshot4.png" alt="Week View">
                 <p>Week View</p>
             </div>
             <div class="screenshot">
-                <img src="images/screenshot5.PNG" alt="Day View">
+                <img src="images/screenshot5.png" alt="Day View">
                 <p>Day View</p>
             </div>
             <div class="screenshot">
-                <img src="images/screenshot6.PNG" alt="List View">
+                <img src="images/screenshot6.png" alt="List View">
                 <p>List View</p>
             </div>
         </div>
