--- a/graviton/index.html
+++ b/graviton/index.html
@@ -60,6 +60,27 @@
             margin: 0 auto;
         }
 
+        .screenshots {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+            gap: 20px;
+            margin: 40px 0;
+        }
+
+        .screenshot {
+            background: #1a1a1a;
+            border-radius: 16px;
+            padding: 15px;
+            text-align: center;
+            border: 1px solid #2a2a2a;
+        }
+
+        .screenshot img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+
         .features {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -81,10 +102,7 @@
             margin-bottom: 10px;
         }
 
-        .feature p {
-            font-size: 0.95em;
-            color: #888;
-        }
+        .feature p { font-size: 0.95em; color: #888; }
 
         .download-section {
             text-align: center;
@@ -104,11 +122,6 @@
             cursor: not-allowed;
         }
 
-        .app-store-btn.active {
-            opacity: 1;
-            cursor: pointer;
-        }
-
         footer {
             background: #111;
             color: #888;
@@ -122,8 +135,6 @@
             text-decoration: none;
             margin: 0 15px;
         }
-
-        footer a:hover { text-decoration: underline; }
 
         @media (max-width: 768px) {
             header h1 { font-size: 2em; }
@@ -140,6 +151,21 @@
         <div class="description">
             <h2>Control. Rotate. Conquer.</h2>
             <p>Graviton challenges you to master 3D rotation using your device's motion sensors. Guide a soccer ball through a spinning sphere — from pole to pole — across 6 increasingly demanding levels.</p>
+        </div>
+
+        <div class="screenshots">
+            <div class="screenshot">
+                <img src="images/screenshoot1.png" alt="Graviton Screenshot 1">
+            </div>
+            <div class="screenshot">
+                <img src="images/screenshoot2.png" alt="Graviton Screenshot 2">
+            </div>
+            <div class="screenshot">
+                <img src="images/screenshoot3.png" alt="Graviton Screenshot 3">
+            </div>
+            <div class="screenshot">
+                <img src="images/screenshoot4.png" alt="Graviton Screenshot 4">
+            </div>
         </div>
 
         <div class="features">
@@ -177,4 +203,3 @@
     </footer>
 </body>
 </html>
-
